@@ -1,5 +1,5 @@
 kdelay=0.625
-p1=0.00085
+p1=0.0002095
 p2=8
 p3=0.523
 p4=0.0514
@@ -17,12 +17,12 @@ p15=0.000663
 p16=95
 p17=0.00109
 p18=0.075
-p19=0.00008
+p19=0.000012
 p20=5.37
 p21=0.0689
 p22=127
 p23=2043
-p24=0.005
+p24=0.0047
 p25=0.00185
 p26=0.00061
 p27=-0.000505
@@ -46,4 +46,4 @@ p44=0.12
 p45=1.78
 p46=0.12
 p47=1
-p48=4.5
+p48=25
