@@ -114,25 +114,25 @@ sub new {
 
     # Thysim: ThyrosimJr
     # Calculated by Simon Han using updated parameters from Aaron et al.
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{1}  = 0.11211606146665616;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{2}  = 0.14951877955459614;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{3}  = 0.16047235104602794;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{4}  = 0.0025330855721189993;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{5}  = 0.0048376677790169294;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{6}  = 0.03491873001264855;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{7}  = 1.6238788774804438;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{8}  = 6.662618845399546;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{9}  = 6.662539424598554;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{1}  = 0.08537986566616353;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{2}  = 0.11151355189891558;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{3}  = 0.11757879939521299;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{4}  = 0.0021584999885251883;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{5}  = 0.003844919701867285;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{6}  = 0.02891231073810239;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{7}  = 5.201125786290925;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{8}  = 5.553663927601651;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{9}  = 5.556354748291701;
     $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{10} = 0;
     $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{11} = 0;
     $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{12} = 0;
     $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{13} = 0;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{14} = 3.1361522331058156;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{15} = 3.55890144328925;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{16} = 3.8203390098846306;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{17} = 3.906321897554962;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{18} = 3.8312641499591105;
-    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{19} = 3.6311814309761647;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{14} = 10.134192450244074;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{15} = 11.557153559626624;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{16} = 12.431906546150651;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{17} = 12.71040493270924;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{18} = 12.443498542246873;
+    $self->{ICKey}->{ThyrosimJr}->{1000088010000880}->{19} = 11.75608393106433;
 
     #--------------------------------------------------
     # Define input types and hormones
