@@ -1,4 +1,7 @@
 Change log
+2021-03-11
+1. Updated ThyrosimJr parameters and SS values.
+
 2020-12-09
 1. Updated ThyrosimJr parameters and SS values.
 
